snapcatch2 (2.13.7.3~bionic) bionic; urgency=high

  * Added the --tmp-dir command line option here instead of duplicating code.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 18 Sep 2021 17:35:41 -0700

snapcatch2 (2.13.7.2~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 28 Aug 2021 22:52:42 -0700

snapcatch2 (2.13.7.1~bionic) bionic; urgency=high

  * Bump build version to rebuild against newer snapcmakemodules.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 24 Aug 2021 13:53:46 -0700

snapcatch2 (2.13.7.0~bionic) bionic; urgency=high

  * Upgrade to 2.13.7.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 28 Jul 2021 12:10:25 -0700

snapcatch2 (2.13.6.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 17:40:26 -0700

snapcatch2 (2.13.6.0~bionic) bionic; urgency=high

  * Upgrade to 2.13.6.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 18 Apr 2021 12:22:17 -0700

snapcatch2 (2.13.5.1~bionic) bionic; urgency=high

  * Somehow launchpad refused the bionic version, trying again.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 12 Apr 2021 10:00:14 -0700

snapcatch2 (2.13.5.0~bionic) bionic; urgency=high

  * Upgrade to 2.13.5, hopefully working like a charm.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 12 Apr 2021 09:21:59 -0700

snapcatch2 (2.13.4.11~bionic) bionic; urgency=high

  * Okay, it looks like trying to use /usr/share/cmake is not a good idea
    because one of the cmake script uses a relative path to find the library.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 08 Jan 2021 17:33:51 -0800

snapcatch2 (2.13.4.10~bionic) bionic; urgency=high

  * Installation failed for a missing directory.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 08 Jan 2021 16:14:38 -0800

snapcatch2 (2.13.4.9~bionic) bionic; urgency=high

  * There is a static library that was introduced in 2.13.4 that causes hurdles