@@ -1,8 +1,9 @@
 snapcatch2 (2.13.7.3~bionic) bionic; urgency=high
 
   * Added the --tmp-dir command line option here instead of duplicating code.
+  * Added a function to compare floating point numbers with an epsilon.
 
- -- Alexis Wilke <alexis@m2osw.com>  Sat, 18 Sep 2021 17:35:41 -0700
+ -- Alexis Wilke <alexis@m2osw.com>  Wed, 29 Sep 2021 00:00:15 -0700
 
 snapcatch2 (2.13.7.2~bionic) bionic; urgency=high
 
